refactor: refactor switch case in TrainingPlanFlowServiceImpl